--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <p>This is a new repo</p>
 <p>
-    made a chane in the repository of feature1 branch!!!!!!!!
+    made a chane in the repository of feature1 branch(app)
 </p>
